required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- mapshape.c: Applied patch to make the location of tiled data relative to the
  tileindex directory if SHAPEPATH is not set. (#2369)

- maptemplate.c: Fixed issues in RFC 36 implementation that prevented mapscript 
  mapObj->processQueryTemplate() method from working.

- WMS/WFS: extend warning message (#1396)

- WFS: Respect units for the DWhitin parameter (#2297)

- WFS: correct OGC Contains filter  (#2306)

- WMS: set srsName correctly for GetFeatureInfo (#2502)

- SOS: detect invalid time strings (#2560)

- SOS: more srsName support (#2558)

- mapserv.c, maptemplate.c: fixed problem with arguments to msGenerateImages(). (#2655)

- WMS: produce warning if layer extent is null (#1396)

- WFS: project LatLongBoundingBox if required (#2579)

- SOS: generate error for some invalid filters (#2604)

- SLD: Use style's width paramater when generating sld (#1192)

Version 5.2.0-beta2 (2008-06-18):
---------------------------------

- mapogcsos.c: support invalid procedure in GetObservation (#2561)

- Fixed possible buffer overrun with Oracle Spatial driver (#2572)

- mapogcsos.c: support srsName in GetObservation (#2414)

- Filter Encoding: Modify DWithin definition (#2564)

- Added webObj legendformat and browseformat mapping in PHP MapScript (#2309)

- Removed static buffer size limit in msIO_*printf() functions (#2214)

- Fixed libiconv detection in configure for OSX 10.5 64 bit (#2396)

- mapstring.c: possible buffer overflow in msGetPath (#2649)

- maputil.c: Correct expression evaluation with text containing 
  apostrophes (#2641)
